Fix: Adjust alignment on blog page

--- a/frontend/src/app/blog/Blog.module.css
+++ b/frontend/src/app/blog/Blog.module.css
@@ -5,7 +5,8 @@
   line-height: 1.5;
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1.25rem;
+  gap: 3rem;
+  overflow-x: auto;
 }
 
 .header {
@@ -19,7 +20,11 @@
   padding-block: 4rem;
 }
 
-.header > * {
+.header .content {
+  margin-inline: auto;
+}
+
+.header > .content > * {
   max-width: min(50rem, 100vw);
 }
 
@@ -27,9 +32,16 @@
   font-size: min(10vw, 5rem);
 }
 
+.container h2 {
+  font-size: 2rem;
+  width: min(100%, var(--max-width));
+  margin-inline: auto;
+  padding-inline: 1.25rem;
+}
+
 .posts {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 2rem;
   width: min(100%, var(--max-width));
   margin-inline: auto;
@@ -42,10 +54,7 @@
   transition: 300ms;
   border: 1px solid #8585854e;
   border-radius: 0.4rem;
-  padding: 1rem;
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
+  overflow: hidden;
 }
 
 .card:hover {
@@ -55,6 +64,24 @@
 
 .card > h3 {
   font-weight: 600;
+}
+
+.card .mainImageWrapper {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 16/9;
+  overflow: hidden;
+}
+
+.card .details {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.card .mainImage {
+  object-fit: cover;
 }
 
 .card .authorImage {
