--- a/frontend/src/components/home/Footer/Footer.module.css
+++ b/frontend/src/components/home/Footer/Footer.module.css
@@ -46,7 +46,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   gap: 3rem;
-  width: 100%;
 }
 
 .container nav {
